<resources>
    <string name="app_name">WeatherApp</string>
    <!-- The main screen strings -->
    <string name="current_temperature_celsius">%1$s°C</string>
    <string name="current_min_temperature_celsius">Min: %1$s°C</string>
    <string name="current_max_temperature_celsius">Max: %1$s°C</string>
    <string name="current_min_temperature_fahrenheit">Min: %1$s°F</string>
    <string name="current_max_temperature_fahrenheit">Max: %1$s°F</string>
    <string name="current_feels_like_temperature_celsius">Feels like: %1$s°C</string>
    <string name="current_feels_like_temperature_fahrenheit">Feels like: %1$s°F</string>
    <string name="current_temperature_fahrenheit">%1$s°F</string>
    <string name="weather_icon_description">Weather icon</string>
    <string name="current_humidity">%1$s%%</string>
    <string name="current_wind_unit">m/s</string>
    <string name="current_pressure_hpa">%1$s</string>
    <string name="current_pressure_mmHg">%1$s</string>
    <string name="pressure_unit_card_hpa">hPa</string>
    <string name="pressure_unit_card_mmHg">mmHg</string>
    
    <!-- Hourly Forecast -->
    <string name="precipitation_in_percent">%1$s%%</string>

    <!-- Preferences screen stings -->
    <string name="preferences_measurement_system_category_title">Measurement System</string>
    <string name="preferences_measurement_system_temperature_unit">Temperature Unit</string>
    <string name="preferences_measurement_system_pressure_unit">Pressure Unit</string>
    <string name="preference_summary_unit_for_pressure">Select the unit for pressure</string>
    <string name="preference_unit_for_temperature">Select the unit for temperature</string>
    <string name="hourly_forecast_card_header">Hourly forecast</string>
    <string name="daily_forecast_card_header">Daily forecast for 4 days</string>
    <string name="wind_information_card_header">Wind information</string>
    <string name="humidity_card_header">Humidity</string>
    <string name="pressure_card_header">Pressure</string>
    <string name="app_version">Version: %1$s</string>
    <string name="error_get_weather_information_content_description">Error get weather information</string>
    <string name="error_weather_text">Can\'t get the information about your location. Try again or load default city.</string>
    <string name="error_weather_icon">Error weather icon</string>
    <string name="try_again_button_text">Try again</string>
    <string name="load_default_button_text">Load default</string>
    <string name="settings_icon_content_description">Settings icon</string>
    <string name="refresh_icon_content_description">Refresh icon</string>
    <string name="hourly_forecast_header_icon_content_description">Hourly forecast header icon</string>
    <string name="daily_forecast_header_icon_content_description">Daily forecast header icon</string>
    <string name="wind_card_header_icon_content_description">Wind card header icon</string>
    <string name="wind_card_direction_icon_content_description">Wind icon</string>
    <string name="humidity_card_header_icon_content_description">Humidity card header icon</string>
    <string name="pressure_card_header_icon_content_description">Pressure card header icon</string>
    <string name="hourly_forecast_weather_icon_content_description">Hourly forecast weather icon</string>


    <!-- Settings string -->
    <!-- Массив единиц температуры -->
    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="temperature_values">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <!-- Массив единиц давления -->
    <string-array name="pressure_units">
        <item>hPa</item>
        <item>mmHg</item>
    </string-array>

    <string-array name="pressure_values">
        <item>hPa</item>
        <item>mmHg</item>
    </string-array>
</resources>