<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Категория настроек для системы измерения -->
    <PreferenceCategory
        android:key="measurement_system_category"
        android:title="@string/preferences_measurement_system_category_title">

        <!-- Настройка выбора единицы температуры -->
        <ListPreference
            android:defaultValue="Celsius"
            android:dialogTitle="@string/preferences_measurement_system_temperature_unit"
            android:entries="@array/temperature_units"
            android:entryValues="@array/temperature_values"
            android:key="temperature_unit"
            android:summary="@string/preference_unit_for_temperature"
            android:title="@string/preferences_measurement_system_temperature_unit"
            app:useSimpleSummaryProvider="true" />

        <!-- Настройка выбора единицы давления -->
        <ListPreference
            android:defaultValue="hPa"
            android:dialogTitle="@string/preferences_measurement_system_pressure_unit"
            android:entries="@array/pressure_units"
            android:entryValues="@array/pressure_values"
            android:key="pressure_unit"
            android:summary="@string/preference_summary_unit_for_pressure"
            android:title="@string/preferences_measurement_system_pressure_unit"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
